fix overflowing credits

--- a/style.scss
+++ b/style.scss
@@ -850,7 +850,7 @@ footer {
   }
   p {
     padding: 0;
-    margin: 1em 3em 1em 3em;
+    margin: 1em 5em 1em 1em;
   }
 }
 
