--- a/style_prefixed.css
+++ b/style_prefixed.css
@@ -610,7 +610,7 @@ footer {
     align-items: flex-start; }
   #credits p {
     padding: 0;
-    margin: 1em 3em 1em 3em; }
+    margin: 1em 5em 1em 1em; }
 
 #created_texty {
   display: flex;
